# linder

./: README.md  sore_ui_expanded.rs
energy-monitor/: Cargo.toml
energy-monitor/ui/: images.slint  mid_main.slint
med-ops/: README.md
printer-demo/rust/: Cargo.toml
printer-demo/ui/: common.slint  copy_page.slint  home_page.slint  ink_page.slint  printer_queue.slint  printerdemo.slint  scan_page.slint  settings_page.slint  usb_page.slint
sore-ui/: Cargo.toml  README.md  build.rs
sore-ui/src/: main.rs
sore-ui/ui/: About.slint  GlobalStyles.slint  MainWindow.slint  Navigator.slint  Overview.slint  SoreButtton.slint  SoreWindow.slint  TemperaturePlot.slint  WindowGlobal.slint  navigator.slint  sore-window.slint
todo-mvc/: Cargo.toml
todo-mvc/src/: main.rs
weather-demo/: Cargo.toml
